Ignore symlinked images in css directory.

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,4 +2,11 @@
   "eslint.options": {
     "configFile": ".eslintrc.js",
   },
+  "files.exclude": {
+    "**/.env": true,
+    "css/*.css": true,
+    "css/*.jpg": true,
+    "css/*.png": true,
+    "js/_global.js": true
+  },
 }
